# the-secret-project

./: Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  main.rs  process.rs  reader.rs  write.rs
core/: Cargo.toml
core/src/: client.rs  error.rs  lib.rs  transaction.rs  transaction_type.rs
core/src/account/: basic.rs  mod.rs  wrap.rs
core/src/processor/: basic_processor.rs  mod.rs  wrap_processor.rs
core/src/repository/: basic_account_repository.rs  dlq_repository.rs  mod.rs  transaction_repository.rs  wrap_account_repository.rs
